--- a/fixes/index.html
+++ b/fixes/index.html
@@ -283,9 +283,9 @@ title: Math, Sonification, Plots
                             else {
                                 pos++;
                                 // HORIZONTAL elem.style.top = pos + 'px' +5; // Zero Slope
-                                // elem.style.top = pos + 'px';
-                                elem.style.left = pos + 'px'; // Neg Slope
-                                elem.style.bottom = pos + 'px';
+                                elem.style.top = pos + 'px';
+                                // elem.style.left = pos + 'px'; // Neg Slope
+                                elem.style.right = pos - 'px';
                             }
                       }
                 }
