--- a/fixes/index.html
+++ b/fixes/index.html
@@ -284,7 +284,7 @@ title: Math, Sonification, Plots
                                 pos++;
                                 elem.style.top = pos + 'px';
                                 // elem.style.left = pos + 'px'; // Neg Slope
-                                elem.style.left = pos - 'px';
+                                elem.style.left = -pos + 'px';
                             }
                       }
                 }
