--- a/fixes/index.html
+++ b/fixes/index.html
@@ -282,7 +282,7 @@ title: Math, Sonification, Plots
                             }
                             else {
                                 pos++;
-                                elem.style.top = (pos-20) + 'px';
+                                elem.style.top = (pos+20) + 'px';
                                 // elem.style.left = pos + 'px'; // Neg Slope
                                 elem.style.left = (pos+50) + 'px';
                             }
