--- a/fixes/index.html
+++ b/fixes/index.html
@@ -282,9 +282,10 @@ title: Math, Sonification, Plots
                             }
                             else {
                                 pos++;
-                                elem.style.top = (pos+20) + 'px';
+                                elem.style.top = (pos-10) + 'px';
                                 // elem.style.left = pos + 'px'; // Neg Slope
                                 elem.style.left = (pos+50) + 'px';
+                                elem.style.right = (50) + 'px';
                             }
                       }
                 }
