--- a/fixes/index.html
+++ b/fixes/index.html
@@ -285,7 +285,7 @@ title: Math, Sonification, Plots
                                 elem.style.top = (pos-10) + 'px';
                                 // elem.style.left = pos + 'px'; // Neg Slope
                                 elem.style.left = (pos+50) + 'px';
-                                elem.style.right = (-50) + 'px';
+                                elem.style.right = (pos-10) + 'px';
                             }
                       }
                 }
