--- a/fixes/index.html
+++ b/fixes/index.html
@@ -284,8 +284,7 @@ title: Math, Sonification, Plots
                                 pos++;
                                 elem.style.top = (pos-10) + 'px';
                                 // elem.style.left = pos + 'px'; // Neg Slope
-                                elem.style.left = (pos+50) + 'px';
-                                elem.style.right = (pos+60) + 'px';
+                                elem.style.left = (pos+50) + 'px'; // Neg Slope
                             }
                       }
                 }
