--- a/fixes/index.html
+++ b/fixes/index.html
@@ -198,14 +198,9 @@ title: Math, Sonification, Plots
             to   { transform: rotate(360deg) translateX(150px) rotate(-360deg); }
         }
         */
-
-        .box img:hover, .box img.clicked {
-            margin-left:500px;
-            -webkit-transition:1s; // you don't need to specify this again
-         }
         </style>
 </head>
-    /* ====== */
+    /* =================== */
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
 
@@ -227,10 +222,6 @@ title: Math, Sonification, Plots
         </div>
 
         <script>
-                $('.box img').on('click', function() {
-                            $(this).toggleClass('clicked');
-                        });
-                
                 var audio = document.getElementById("audio");
                 audio.volume = 0.4;
                 var isPlaying = false;
@@ -244,8 +235,8 @@ title: Math, Sonification, Plots
                 }
 
                 function play(button) {
-                        var elem = document.getElementById("myAnimation");   
-                        var pos = 75;
+                        // var elem = document.getElementById("myAnimation");   
+                        // var pos = 75;
                         // var id = setInterval(frame, 10);
                         // var id = setTimeout(frame, 1000);
                         // var audio = document.getElementById("audio");
