--- a/fixes/index.html
+++ b/fixes/index.html
@@ -310,5 +310,28 @@ title: Math, Sonification, Plots
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOLUME</button>
 
+
+
         <div class='box'></div>
         <button class='toggleButton' value='play'>Play</button>
+
+        <script>
+        var boxOne = document.getElementsByClassName('box')[0],
+                     $boxTwo = $('.box:eq(1)');
+
+        document.getElementsByClassName('toggleButton')[0].onclick = function() {
+            if(this.innerHTML === 'Play') { 
+                this.innerHTML = 'Pause';
+                boxOne.classList.add('horizTranslate');
+            }
+            else {
+                this.innerHTML = 'Play';
+                var computedStyle = window.getComputedStyle(boxOne),
+                marginLeft = computedStyle.getPropertyValue('margin-left');
+                boxOne.style.marginLeft = marginLeft;
+                boxOne.classList.remove('horizTranslate');    
+            }
+        }
+
+        
+        </script>
