--- a/fixes/index.html
+++ b/fixes/index.html
@@ -313,10 +313,9 @@ title: Math, Sonification, Plots
 
 
         <div class='box'></div>
-        <button class='toggleButton' onclick="PLAY()" value='play'>Play</button>
+        <button class='toggleButton' value='play'>Play</button>
 
         <script>
-        PLAY() {
         var boxOne = document.getElementsByClassName('box')[0],
                      $boxTwo = $('.box:eq(1)');
 
@@ -333,7 +332,17 @@ title: Math, Sonification, Plots
                 boxOne.classList.remove('horizTranslate');    
             }
         }
-        }
 
-        
+        $('.toggleButton:eq(1)').on('click', function() { 
+            if($(this).html() === 'Play') {
+                $(this).html('Pause');
+                $boxTwo.addClass('horizTranslate');
+            }
+            else {
+                $(this).html('Play');
+                var computedStyle = $boxTwo.css('margin-left');
+                $boxTwo.removeClass('horizTranslate');
+                $boxTwo.css('margin-left', computedStyle);
+            }
+        });
         </script>
