--- a/fixes/index.html
+++ b/fixes/index.html
@@ -316,7 +316,7 @@ title: Math, Sonification, Plots
         <button class='toggleButton' onclick="PLAY(this)" value='Play'>Play</button>
 
         <script>
-        PLAY(button) {
+        function PLAY(button) {
             this.innerHTML = '===FUCK---';
         var boxOne = document.getElementsByClassName('box')[0],
                      $boxTwo = $('.box:eq(1)');
