--- a/fixes/index.html
+++ b/fixes/index.html
@@ -317,7 +317,7 @@ title: Math, Sonification, Plots
 
         <script>
         function PLAY(button) {
-            this.innerHTML = '===FUCK---';
+            button.innerHTML = '===FUCK---';
         var boxOne = document.getElementsByClassName('box')[0],
                      $boxTwo = $('.box:eq(1)');
 
