--- a/fixes/index.html
+++ b/fixes/index.html
@@ -313,26 +313,23 @@ title: Math, Sonification, Plots
 
 
         <div class='box'></div>
-        <button class='toggleButton' onclick="PLAY(this)" value='Play'>Play</button>
+        <button class='toggleButton' onclick="PLAY(this)" value='play'>Play</button>
 
         <script>
         function PLAY(button) {
-            button.innerHTML = '===FUCK---';
-        var boxOne = document.getElementsByClassName('box')[0],
-                     $boxTwo = $('.box:eq(1)');
-
-        document.getElementsByClassName('toggleButton')[0].onclick = function() {
-            if(this.innerHTML === 'Play') { 
-                this.innerHTML = 'Pause';
+            var boxOne = document.getElementsByClassName('box')[0],
+                         $boxTwo = $('.box:eq(1)');
+       
+            if(button.innerHTML === 'Play') { 
+                button.innerHTML = 'Pause';
                 boxOne.classList.add('horizTranslate');
             }
             else {
-                this.innerHTML = 'Play';
+                button.innerHTML = 'Play';
                 var computedStyle = window.getComputedStyle(boxOne),
                     marginLeft = computedStyle.getPropertyValue('margin-left');
                 boxOne.style.marginLeft = marginLeft;
                 boxOne.classList.remove('horizTranslate');    
             }
-        }
         }
         </script>
