--- a/fixes/index.html
+++ b/fixes/index.html
@@ -205,7 +205,7 @@ title: Math, Sonification, Plots
             width: 50px;
             background-color: blue;
         }
-        .box.horizTranslate {
+        .horizTranslate {
             -webkit-transition: 3s;
             -moz-transition: 3s;
             -ms-transition: 3s;
