--- a/fixes/index.html
+++ b/fixes/index.html
@@ -317,8 +317,7 @@ title: Math, Sonification, Plots
 
         <script>
         function PLAY(button) {
-            var boxOne = document.getElementsByClassName('box')[0],
-                         $boxTwo = $('.box:eq(1)');
+            var boxOne = document.getElementsByClassName('box');
        
             if(button.innerHTML === 'Play') { 
                 button.innerHTML = 'Pause';
