--- a/fixes/index.html
+++ b/fixes/index.html
@@ -211,7 +211,7 @@ title: Math, Sonification, Plots
             -ms-transition: 3s;
             -o-transition: 3s;
             transition: 3s;
-            margin-left: 50% !important;
+            margin-left: 50%;
         }
         </style>
 </head>
