--- a/fixes/index.html
+++ b/fixes/index.html
@@ -200,22 +200,18 @@ title: Math, Sonification, Plots
         */
 
         .box {
-                width: 20px;
-                height: 20px;
-                // top: 8px;
-                top: 0;
-                left: 50%;
-                position: absolute;
-                background-color: #555;
-                border-radius: 50%;
+            margin: 30px;
+            height: 50px;
+            width: 50px;
+            background-color: blue;
         }
         .box.horizTranslate {
-                -webkit-transition: 3s;
-                -moz-transition: 3s;
-                -ms-transition: 3s;
-                -o-transition: 3s;
-                transition: 3s;
-                margin-left: 50%;
+            -webkit-transition: 3s;
+            -moz-transition: 3s;
+            -ms-transition: 3s;
+            -o-transition: 3s;
+            transition: 3s;
+            margin-left: 50%;
         }
         </style>
 </head>
