--- a/fixes/index.html
+++ b/fixes/index.html
@@ -205,8 +205,8 @@ title: Math, Sonification, Plots
                 height: 20px;
                 // top: 8px;
                 top: 0;
-                left: 50%;
-                position: absolute;
+                // left: 50%;
+                // position: absolute;
                 background-color: #555;
                 border-radius: 50%;
 
