--- a/fixes/index.html
+++ b/fixes/index.html
@@ -153,10 +153,10 @@ title: Math, Sonification, Plots
                 background-color: #555;
                 border-radius: 50%;
 
-                -webkit-animation-name: example;        /* Safari 4.0 - 8.0 */
-                -webkit-animation-duration: 5s;         /* Safari 4.0 - 8.0 */
-                -webkit-animation-iteration-count: 1;   /* Safari 4.0 - 8.0 */
-                -webkit-animation-direction: normal;   /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
                 animation-name: example;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
@@ -216,12 +216,21 @@ title: Math, Sonification, Plots
                 // background-color: blue;
         }
         .box.horizTranslate {
-                -webkit-transition: 3s;
-                -moz-transition: 3s;
-                -ms-transition: 3s;
-                -o-transition: 3s;
-                transition: 3s;
-                margin-left: 50%;
+                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
+                animation-name: example;
+                animation-duration: 5s;
+                animation-iteration-count: 1;
+                animation-direction: normal;
+                
+                // -webkit-transition: 3s;
+                // -moz-transition: 3s;
+                // -ms-transition: 3s;
+                // -o-transition: 3s;
+                // transition: 3s;
+                // margin-left: 50%;
         }
         </style>
 </head>
