--- a/fixes/index.html
+++ b/fixes/index.html
@@ -215,7 +215,7 @@ title: Math, Sonification, Plots
                 // width: 50px;
                 // background-color: blue;
         }
-        .box.horizTranslate {
+        .horizTranslate {
                 -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
