--- a/fixes/index.html
+++ b/fixes/index.html
@@ -332,7 +332,7 @@ title: Math, Sonification, Plots
 
 
         <div class='box'></div>
-        <button class='toggleButton' onclick="PLAY(this)" value='play'>Play</button>
+        <button class='box' onclick="PLAY(this.class)" value='play'>Play</button>
 
         <script>
         function PLAY(button) {
