--- a/fixes/index.html
+++ b/fixes/index.html
@@ -216,6 +216,11 @@ title: Math, Sonification, Plots
                 // background-color: blue;
         }
         .horizTranslate {
+                -webkit-animation-play-state:running;
+                -moz-animation-play-state:running;
+                -o-animation-play-state:running; 
+                animation-play-state:running;
+                
                 -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
