--- a/fixes/index.html
+++ b/fixes/index.html
@@ -221,11 +221,11 @@ title: Math, Sonification, Plots
                 -o-animation-play-state:running; 
                 animation-play-state:running;
                 
-                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: myAnimation;  /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
                 -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
-                animation-name: example;
+                animation-name: myAnimation;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
                 animation-direction: normal;
