--- a/fixes/index.html
+++ b/fixes/index.html
@@ -153,22 +153,22 @@ title: Math, Sonification, Plots
                 background-color: #555;
                 border-radius: 50%;
 
-                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: myAnimation;      /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
                 -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
-                animation-name: example;
+                animation-name: myAnimation;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
                 animation-direction: normal;
         }
         /* Safari 4.0 - 8.0 */
-        @-webkit-keyframes example {
+        @-webkit-keyframes myAnimation {
             0%   {left:0px; top:0px;}
             100% {left:600px; top:600px;}
         }
         /* Standard syntax */
-        @keyframes example {
+        @keyframes myAnimation {
             0%   {left:0px; top:0px;}
             100% {left:600px; top:600px;}
         }
