--- a/fixes/index.html
+++ b/fixes/index.html
@@ -336,7 +336,7 @@ title: Math, Sonification, Plots
 
 
 
-        <div class='box'></div>
+        <div class='tracePlot'></div>
         <button class='button' onclick="PLAY(this)" value='play'>Play</button>
 
         <script>
