--- a/fixes/index.html
+++ b/fixes/index.html
@@ -346,7 +346,7 @@ title: Math, Sonification, Plots
             if(button.innerHTML === 'Play') { 
                 button.innerHTML = 'Pause';
                 // boxOne.classList.add('horizTranslate');
-                boxOne.setAttribute("class", "horizTranslate");
+                boxOne.setAttribute("class", "tracePlot");
             }
             else {
                 button.innerHTML = 'Play';
