--- a/fixes/index.html
+++ b/fixes/index.html
@@ -125,8 +125,8 @@ title: Math, Sonification, Plots
                 height: 20px;
                 // top: 8px;
                 top: 0;
-                left: 50%;
-                position: absolute;
+                //left: 50%;
+                //position: absolute;
                 background-color: #555;
                 border-radius: 50%;
 
@@ -153,10 +153,10 @@ title: Math, Sonification, Plots
                 background-color: #555;
                 border-radius: 50%;
 
-                -webkit-animation-name: example;        /* Safari 4.0 - 8.0 */
-                -webkit-animation-duration: 5s;         /* Safari 4.0 - 8.0 */
-                -webkit-animation-iteration-count: 1;   /* Safari 4.0 - 8.0 */
-                -webkit-animation-direction: normal;   /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
                 animation-name: example;
                 animation-duration: 5s;
                 animation-iteration-count: 1;
